# starter-cross-compiling-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  x86_64-w64-mingw32.cmake
include/: CMakeLists.txt  String2.cpp  String2.h  Vector.h
src/: String2.cpp  Vector.cpp
